--- a/jsx.html
+++ b/jsx.html
@@ -11,9 +11,9 @@
     <style>
         .header{
             background-color: darkcyan;
-            color: beige;
+            color: white;
             padding: 10px;
-            font-family: 'Times New Roman', Times, serif;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
     <body>
